1.6.14
	* bugfix #450: Base # bytes for P, G and Y (T) on the guaranteed
	  to be bigger (or equal) P in ldns_key_dsa2bin.
	  Thanks Peter Koch and Patrick Fedick.
	* bugfix #449: Deep free cloned rdf's in ldns_tsig_mac_new.
	  Thanks Michael Sheldon.
	* bugfix #448: Copy nameserver value (in stead of reference) of the
	  answering nameserver to the answer packet in ldns_send_buffer, so
	  the original value may be deep freed with the ldns_resolver struct.
	  Thanks Michael Meisel.
	* New -0 option for ldns-read-zone to replace inception, expiration
	  and signature rdata fields with (null). Thanks Paul Wouters.
	* New -p option for ldns-read-zone to prepend-pad SOA serial to take
	  up ten characters.
	* Return error if printing RR fails due to unknown/null RDATA.
	* New TLSA support (draft-ietf-dane-protocol).

1.6.13	2012-05-21
	* New -S option for ldns-verify-zone to chase signatures online.
	* New -k option for ldns-verify-zone to validate using a trusted key.
	* New inception and expiration margin options (-i and -e) to 
	  ldns-verify-zone.
	* New ldns_dnssec_zone_new_frm_fp and ldns_dnssec_zone_new_frm_fp_l
	  functions.
	* New ldns_duration* functions (copied from OpenDNSSEC source)
	* fix ldns-verify-zone to allow NSEC3 signatures to come before
	  the NSEC3 RR in all cases. Thanks Wolfgang Nagele.
	* Zero the correct flag (opt-out) when creating NSEC3PARAMS.
	  Thanks Peter van Dijk.
	* Canonicalize RRSIG's Signer's name too when validating, because 
	  bind and unbound do that too. Thanks Peter van Dijk.
	* bugfix #433: Allocate rdf using ldns_rdf_new in ldns_dname_label
	* bugfix #432: Use LDNS_MALLOC & LDNS_FREE i.s.o. malloc & free
	* bugfix #431: Added error message for LDNS_STATUS_INVALID_B32_EXT
	* bugfix #427: Explicitely link ssl with the programs that use it.
	* Fix reading \DDD: Error on values that are outside range (>255).
	* bugfix #429: fix doxyparse.pl fails on NetBSD because specified
	  path to perl.