@@ -45,16 +45,16 @@ _ldns.so:	../../Makefile
 	$(MAKE) -C ../..
 
 clean:
-	rm -rdf examples/ldns
+	rm -rf examples/ldns
 	rm -f _ldns.so ldns_wrapper.o
 	$(MAKE) -C ../.. clean
 
 testenv: ../../.libs/libldns.so.1 _ldns.so
-	rm -rdf examples/ldns
-	cd examples && mkdir ldns && ln -s ../../ldns.py ldns/__init__.py && ln -s ../../_ldns.so ldns/_ldns.so && ln -s ../../../../.libs/libldns.so.1 ldns/libldns.so.1 && ls -la
+	rm -rf examples/ldns
+	cd examples && mkdir ldns && ln -s ../../ldns.py ldns/__init__.py && ln -s ../../../../.libs/_ldns.so ldns/_ldns.so && ln -s ../../../../.libs/libldns.so.1 ldns/libldns.so.1 && ls -la
 	@echo "Run a script by typing ./script_name.py"
 	cd examples && LD_LIBRARY_PATH=ldns bash
-	rm -rdf examples/ldns
+	rm -rf examples/ldns
 
 doc: ../../.libs/ldns.so.1 _ldns.so
 	$(MAKE) -C docs html
@@ -63,5 +63,4 @@ doc: ../../.libs/ldns.so.1 _ldns.so
 swig: ldns.i
 	swig -python -py3 -o ldns_wrapper.c -I../.. ldns.i
 	gcc -c ldns_wrapper.c -O9 -fPIC -I../.. -I../../ldns -I/usr/include/python3.1 -I. -o ldns_wrapper.o
-	ld -shared ldns_wrapper.o -L../../.libs -lldns -o _ldns.so 
-
+	ld -shared ldns_wrapper.o -L../../.libs -lldns -o _ldns.so
